--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,75 @@
 @font-face {
     font-family: mifuente;
-    src: url('recursos/fonts/caveat.woff2');
+    src: url(../recursos/fonts/caveat.woff2);
+}
+
+body {
+    
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#contenedor {
+    width: 100%;
+    display: block;
+    background-image: url("../recursos/imagenes/fondo1.jpg" );
+    background-position: center;
+    filter: brightness(0.5); 
+    height: 250px;
+    background-repeat: no-repeat;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        
+    
+
 }
 
 
+#divlogo {
+    
+    display: block;
+    margin:0px auto;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    height: 60px;
+    
+    
 
-#b1 {
-    background-image: url("../recursos/imagenes/fondo1.jpg" ), url("../recursos/imagenes/logo-tatin.png");
-    background-position: center, center;
-    height: 250px, 75px;
-    background-repeat: no-repeat, no-repeat; 
-    position: absolute, relative; 
-    width: 100%, 75px;
+}
+
+.contenido {
+
+    display: block;
+    width: 1200px;
+    margin: 0 auto 0 auto;
+    font-size: 14px;
+    
+    
+
+}
+
+#text1 {
+    
+    font-family: mifuente;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(36, 114, 104);
+    margin: 0px auto ;
+    width: 28%;
+    border:rgb(36, 114, 104)  solid;
+  
+ 
+}
+
+#txtpromo {
+    color: white;
     
 }
 
-#b2{
+div2{
 
 }
 
