--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,74 +4,72 @@
 }
 
 body {
-    
+
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
-#contenedor {
+#contenedor { /*Primer div: tiene el logo mas txt de promo */
     width: 100%;
     display: block;
-    background-image: url("../recursos/imagenes/fondo1.jpg" );
+    background-image: url("../recursos/imagenes/fondo1.jpg");
     background-position: center;
-    filter: brightness(0.5); 
     height: 250px;
     background-repeat: no-repeat;
-        margin: 0;
-        padding: 0;
-        position: relative;
-        
+    position: relative;
+    
+   
+}
+
+#contenedor:before { /* Para añadirle la sombra a la imagen del primer div*/
+    content: '';
+    position: absolute;
+    background-color: #000;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; 
+    opacity: 0.7;
+    margin: 0 auto;
     
 
 }
 
 
-#divlogo {
-    
+#divlogo { /*Div que contiene el logo */
+
     display: block;
-    margin:0px auto;
+    margin: 0px auto;
     padding: 10px 10px 10px 10px;
     text-align: center;
     height: 60px;
+    filter: contrast(10) brightness(10)  ;
+    opacity: 10;
     
     
+
 
 }
 
-.contenido {
 
-    display: block;
-    width: 1200px;
-    margin: 0 auto 0 auto;
-    font-size: 14px;
-    
-    
+#text1 { /* Es el div del texto promocion*/
 
-}
-
-#text1 {
-    
     font-family: mifuente;
     font-weight: bold;
     color: white;
     background-color: rgb(36, 114, 104);
-    margin: 0px auto ;
-    width: 28%;
-    border:rgb(36, 114, 104)  solid;
-  
- 
-}
-
-#txtpromo {
-    color: white;
+    margin: 0px auto;
+    width: 18%;
+    padding-top: 0.5px;
+    padding-bottom: 0.5px;
+    text-align: center;
+    position: relative;
     
-}
-
-div2{
 
 }
-
-
 
