--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,9 +9,11 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: rgb(236, 233, 233);
 }
 
-#contenedor { /*Primer div: tiene el logo mas txt de promo */
+#contenedor1 {
+    /*Primer div: tiene el logo mas txt de promo */
     width: 100%;
     display: block;
     background-image: url("../recursos/imagenes/fondo1.jpg");
@@ -19,11 +21,13 @@ body {
     height: 250px;
     background-repeat: no-repeat;
     position: relative;
-    
+    background-size: cover;
    
+
 }
 
-#contenedor:before { /* Para añadirle la sombra a la imagen del primer div*/
+#contenedor1:before {
+    /* Para añadirle la sombra a la imagen del primer div*/
     content: '';
     position: absolute;
     background-color: #000;
@@ -33,43 +37,77 @@ body {
     top: 0;
     bottom: 0;
     left: 0;
-    right: 0; 
+    right: 0;
     opacity: 0.7;
     margin: 0 auto;
-    
-
 }
 
 
-#divlogo { /*Div que contiene el logo */
+#divlogo {
+    /*Div que contiene el logo */
 
     display: block;
     margin: 0px auto;
     padding: 10px 10px 10px 10px;
     text-align: center;
     height: 60px;
-    filter: contrast(10) brightness(10)  ;
+    filter: contrast(10) brightness(10);
     opacity: 10;
-    
-    
-
-
 }
 
 
-#text1 { /* Es el div del texto promocion*/
+#text1 {
+    /* Es el div del texto promocion*/
 
     font-family: mifuente;
     font-weight: bold;
     color: white;
     background-color: rgb(36, 114, 104);
     margin: 0px auto;
-    width: 18%;
+    width: 25%;
     padding-top: 0.5px;
     padding-bottom: 0.5px;
     text-align: center;
     position: relative;
+}
+
+.letraVerde{ /*Para poner las letras verdes */
+    color: rgb(36, 114, 104);
+}
+
+#posIzAqA{ /*Para poner texto a la izquierda y abajo */
+position: relative;
+display: block;
+
+}
+
+#posCen{ /*Para poner texto centrado */
+    text-align: center;
+    }
+
+#fotosArriba{ /* Para poner las fotos a la derecha */
+    display: block;
+    position: relative;
+    left: 870px;
+    font-size: 0px;
     
 
 }
+
+#margen1{ /* margen primera foto */
+    margin-right: 30px;
+    display: inline-block;
+    
+}
+
+#fotosAbajo{ /* Para poner las fotos a la derecha */
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    left: 120px;
+}
+
+
+
+
 
